[package]
name = "percolator-router"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-log = { workspace = true }
percolator-common = { path = "../common" }

[features]
default = []
bpf-entrypoint = []
